adding simple validations, and validations feedback.

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ html {
 }
 
 section {
-  @apply w-11/12 max-w-2xl px-4 py-4 rounded-xl m-12 mx-auto bg-white;
+  @apply w-11/12 max-w-2xl p-4 rounded-xl m-12 mx-auto bg-white;
 }
 
 label {
@@ -20,11 +20,15 @@ label {
 }
 
 input {
-  @apply block font-bold mb-4 px-2 py-2 
-  rounded-md border border-solid w-80 min-w-full 
+  @apply block font-bold mb-4 p-2
+  rounded-md border border-solid w-full min-w-full 
   focus:outline-none focus:bg-blue-100;
 }
 
 button {
   @apply px-6 py-2 rounded-md border-none text-white bg-blue-500 hover:bg-blue-600 active:bg-blue-700;
+}
+
+.form-control {
+  margin-bottom: 1rem;
 }
